# RO47014-KR-SR

./: .gitignore  .gitmodules  README.md  setup.sh
assignment5/: domain_assignment.pddl  domain_prac.pddl  problem_assignment.pddl  problem_prac.pddl
grocery_store_utils/: CMakeLists.txt  README.md  package.xml
grocery_store_utils/launch/: grocery_utils.launch
grocery_store_utils/scripts/: collision_object_server.py  grasp_pose_server.py  grocery_list_server.py  my_grocery.txt
grocery_store_utils/srv/: addCollObj.srv  addCollObjByAruco.srv  getGraspPose.srv  getProduct.srv  listInfo.srv  removeCollObj.srv  removeProduct.srv  setList.srv
retail_store_simulation/: CMakeLists.txt  README.md  retail_store_simulation.rosinstall
retail_store_simulation/launch/: albert.launch  aruco.launch  default.rviz  project.launch  project_test_pick.launch  simulation.launch  tiago.launch
retail_store_simulation/models/: gripper.dae
retail_store_simulation/scripts/: populate_shelf.py  set_gazebo_env.sh
retail_store_simulation/worlds/: AH_store.world  full_demo.world  grasp_test.world  include_example.world  krr.world  krr_walls.world  project.world  table_to_shelf.world  table_to_shelf_small_product.world  (+1 more)
retail_store_skills/: .gitmodules  README.md  retail_store_skills.repos
retail_store_skills/group13_planning/: CMakeLists.txt  README.md  package.xml
retail_store_skills/group13_planning/config/: objects.yaml  waypoints.yaml
retail_store_skills/group13_planning/include/: RPDiscard.h
retail_store_skills/group13_planning/launch/: rosplan_pick.launch  rosplan_project.launch
retail_store_skills/group13_planning/pddl_files/: .planning.domains.session.json  domain.pddl  domain_pick.pddl  problem.pddl  problem_move.pddl  problem_pick.pddl
retail_store_skills/group13_planning/src/: RPActionInterface.cpp  RPDiscard.cpp  RPMoveBase.cpp  RPPick.cpp  RPPlace.cpp
(+181 files in other folders)
